--- a/dissertating_rmd/dissertation/_bookdown.yml
+++ b/dissertating_rmd/dissertation/_bookdown.yml
@@ -1,6 +1,7 @@
-book_filename: "dissertating"
+book_filename: "dissertating_rmd"
 language:
   ui:
     chapter_name: "Chapter "
 delete_merged_file: true
 output_dir: "docs"
+site: bookdown::bookdown_site
